Workflow error aggregator - publishing for TetraConnect article (#2)
Initial workflow error aggregator merge. Co-authored-by: Dan Reed <dreed@tetrascience.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,2 @@
 # Changes need to be approved by product managers
-* @tetrascience/knowledge-training
-
+* @tetrascience/tetrascience-public-developers @tetrascience/knowledge-training
